added new index

--- a/index.html
+++ b/index.html
@@ -223,6 +223,6 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name="flythereddflagg.github.io" class="md-header-anchor"></a><span>flythereddflagg.github.io</span></h1><h2><a name="projects" class="md-header-anchor"></a><span>Projects</span></h2><ol start='' ><li><a href='./python_book/site/index.html'><span>The Redd Python Book</span></a><span>: A free book to teach beginners about Python and introductory computer science</span></li><li><span>TBA</span></li></ol><p>&nbsp;</p></div>
+<div  id='write'  class = 'is-node'><h1><a name="flythereddflagg.github.io" class="md-header-anchor"></a><span>flythereddflagg.github.io</span></h1><p><span>I am Mark Redd. Below are links to information about some of the open-source projects I am working on.</span></p><h2><a name="projects" class="md-header-anchor"></a><span>Projects</span></h2><ol start='' ><li><a href='./python_book/site/index.html'><span>The Redd Python Book</span></a><span>: A free book to teach beginners about Python and introductory computer science</span></li><li><span>TBA</span></li></ol><p>&nbsp;</p></div>
 </body>
 </html>
