--- a/python_book/site/11-Input-and-Output/index.html
+++ b/python_book/site/11-Input-and-Output/index.html
@@ -357,6 +357,7 @@ is a gift card!" The cockroaches took it home and made slides.</em></p>
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
