--- a/python_book/site/12-Math-and-Data/index.html
+++ b/python_book/site/12-Math-and-Data/index.html
@@ -334,8 +334,9 @@ $
 <p><strong>What is happening here?</strong></p>
 <p>This is a demonstration of binary math operators and assignment operators. Both will be explained below. Lines 28 - 34 demonstrate the assignment operators and were the equivalent of</p>
 <p><code>z = (((((z + x - x) * x) ** x) / x) // x) % x</code>,</p>
-<p><code>z = (z * x)**x / x // x % x</code> or</p>
-<p>$z = modulo(\frac{(zx)^x}{x} // x, x)$</p>
+<p><code>z = (z * x)**x / x // x % x</code> </p>
+<p>or <script type="math/tex; mode=display">z = modulo(\frac{(zx)^x}{x} // x, x)</script>
+</p>
 <p>We will explain all of this in this lesson.</p>
 <h3 id="data-types">Data Types</h3>
 <p>In the lesson on <a href="../09-Variables-and-Memory/">Variables and Memory</a>, we talked about a computer can only move and store numbers in "boxes". However, we can represent anything we want as a series of "boxes" with numbers using some clever tricks that we will not get into here. </p>
@@ -576,6 +577,7 @@ $
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
