--- a/python_book/site/02-Getting-Started/index.html
+++ b/python_book/site/02-Getting-Started/index.html
@@ -384,6 +384,7 @@ make attractive Graphical User Interfaces (GUIs) and many more things. In a very
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
