--- a/python_book/site/03-CLI/index.html
+++ b/python_book/site/03-CLI/index.html
@@ -522,6 +522,7 @@ basic exercises for the command line!</p>
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
