--- a/python_book/site/05-Comments/index.html
+++ b/python_book/site/05-Comments/index.html
@@ -420,6 +420,7 @@ comments or explain a large block of code.
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
