--- a/python_book/site/08-Formatted-Strings/index.html
+++ b/python_book/site/08-Formatted-Strings/index.html
@@ -413,6 +413,7 @@ print(&quot;{0} &quot;.format(&quot;No.&quot;) * 3)
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
