--- a/python_book/site/20-Functions/index.html
+++ b/python_book/site/20-Functions/index.html
@@ -492,6 +492,7 @@ print(f&quot;The egg is {egg}&quot;)
 </div>
     <script>var base_url = '..';</script>
     <script src="../js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="../search/main.js" defer></script>
 
 </body>
