--- a/python_book/site/index.html
+++ b/python_book/site/index.html
@@ -299,6 +299,7 @@
 </div>
     <script>var base_url = '.';</script>
     <script src="js/theme.js" defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
       <script src="search/main.js" defer></script>
 
 </body>
@@ -306,5 +307,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-07-29 17:52:52
+Build Date UTC : 2019-07-29 18:20:44
 -->
