added more mathjax

--- a/python_book/site/12-Math-and-Data/index.html
+++ b/python_book/site/12-Math-and-Data/index.html
@@ -379,37 +379,42 @@ $
 <tbody>
 <tr>
 <td>+ (plus)</td>
-<td><code>x +  y</code> $=x + y$</td>
+<td><code>x +  y</code><script type="math/tex">=x + y</script>
+</td>
 <td>Addition</td>
 <td>Concatenate two strings</td>
 </tr>
 <tr>
 <td>- (dash)</td>
-<td><code>x -  y</code>  $=x - y$</td>
+<td><code>x -  y</code>  <script type="math/tex">=x - y</script>
+</td>
 <td>Subtraction</td>
 <td>No meaning</td>
 </tr>
 <tr>
 <td>* (asterisk)</td>
-<td><code>x *  y</code>  $= xy = x\cdot y$</td>
+<td><code>x *  y</code>  <script type="math/tex">= xy = x\cdot y</script>
+</td>
 <td>Multiplication</td>
 <td>Multiply a string by a positive integer to concatenate string <code>y</code> with itself  <code>x</code> times</td>
 </tr>
 <tr>
 <td>** (double asterisk)</td>
-<td><code>x ** y</code> $=x^y $</td>
+<td><code>x ** y</code> <script type="math/tex">=x^y</script>
+</td>
 <td>The exponent</td>
 <td>No meaning</td>
 </tr>
 <tr>
 <td>/ (forward slash)</td>
-<td><code>x /  y</code> $=x/y=\frac{x}{y}$</td>
+<td><code>x /  y</code> <script type="math/tex">=x/y=\frac{x}{y}</script>
+</td>
 <td>Float (i.e. normal) division</td>
 <td>No meaning</td>
 </tr>
 <tr>
 <td>// (double forward slash)</td>
-<td><code>x // y</code> $=\frac{x}{y}$ rounded down to integer</td>
+<td><code>x // y</code> <script type="math/tex">=\frac{x}{y}</script> rounded down to integer</td>
 <td>Integer division or floor division</td>
 <td>No meaning</td>
 </tr>
