--- a/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
+++ b/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
@@ -369,7 +369,7 @@ following:</p>
 <p>When things get boring or tedious, remember the Karate Kid. You are 
 building a foundation on which you can move mountains.</p>
 <h3 id="learning-to-feed-yourself">Learning to feed yourself</h3>
-<p>I will sometimes have you read <a href="https://docs.python.org/3.7/index.html">Official Python documentation</a> or visit other websites or resources. I do this for a number of reasons but most importantly, I want you to be able to teach yourself everything this book cannot. It would be my goal that after you read and learn everything in this book, you can put it down and never pick it up again because you have learned how to find answers to your <em>own</em> questions. Doing this will make you that much more effective as a programmer and in everything you do. </p>
+<p>I will sometimes have you read <a href="https://docs.python.org/3.7/index.html">Official Python documentation</a> or visit other websites or resources. I do this for a number of reasons but most importantly, I want you to be able to teach yourself everything this book cannot. It would be my goal that, after you have read and learned everything in this book, you can put it down and never pick it up again because you have learned how to find answers to your <em>own</em> questions. Doing this will make you that much more effective as a programmer and in everything you do. </p>
 <p><strong>Remember:</strong> Whenever I tell you to search for something on the Internet, remember that the best way to use a search engine is to type "Python" and then write what you are looking for. This will be a boon to your learning as you go along.</p>
 <!-- Navigation -->
 
