--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ blockquote blockquote { padding-right: 0px; }
 table { padding: 0px; word-break: initial; }
 table tr { border-top: 1px solid rgb(223, 226, 229); margin: 0px; padding: 0px; }
 table tr:nth-child(2n), thead { background-color: rgb(248, 248, 248); }
-table tr th { font-weight: bold; border-width: 1px 1px 0px; border-top-style: solid; border-right-style: solid; border-left-style: solid; border-top-color: rgb(223, 226, 229); border-right-color: rgb(223, 226, 229); border-left-color: rgb(223, 226, 229); border-image: initial; border-bottom-style: initial; border-bottom-color: initial; text-align: left; margin: 0px; padding: 6px 13px; }
-table tr td { border: 1px solid rgb(223, 226, 229); text-align: left; margin: 0px; padding: 6px 13px; }
+table tr th { font-weight: bold; border-width: 1px 1px 0px; border-top-style: solid; border-right-style: solid; border-left-style: solid; border-top-color: rgb(223, 226, 229); border-right-color: rgb(223, 226, 229); border-left-color: rgb(223, 226, 229); border-image: initial; border-bottom-style: initial; border-bottom-color: initial; margin: 0px; padding: 6px 13px; }
+table tr td { border: 1px solid rgb(223, 226, 229); margin: 0px; padding: 6px 13px; }
 table tr th:first-child, table tr td:first-child { margin-top: 0px; }
 table tr th:last-child, table tr td:last-child { margin-bottom: 0px; }
 .CodeMirror-lines { padding-left: 4px; }
@@ -218,11 +218,13 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 .html-for-mac .context-menu { --item-hover-bg-color: #E6F0FE; }
 #md-notification .btn { border: 0px; }
 .dropdown-menu .divider { border-color: rgb(229, 229, 229); }
+.ty-preferences .window-content { background-color: rgb(250, 250, 250); }
+.ty-preferences .nav-group-item.active { color: white; background: rgb(153, 153, 153); }
 
- .typora-export li, .typora-export p, .typora-export,  .footnote-line {white-space: normal;} 
+
 </style>
 </head>
-<body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name="flythereddflagg.github.io" class="md-header-anchor"></a><span>flythereddflagg.github.io</span></h1><p><span>I am Mark Redd. Below are links to information about some of the open-source projects I am working on.</span></p><h2><a name="projects" class="md-header-anchor"></a><span>Projects</span></h2><ol start='' ><li><a href='./python_book/site/index.html'><span>The Redd Python Book</span></a><span>: A free book to teach beginners about Python and introductory computer science</span></li><li><span>TBA</span></li></ol><p>&nbsp;</p></div>
+<body class='typora-export' >
+<div  id='write'  class = 'is-node'><h1><a name="flythereddflagggithubio" class="md-header-anchor"></a><span>flythereddflagg.github.io</span></h1><p><span>I am Mark Edward Redd. Below are links to information about some of the open-source projects I am working on.</span></p><h2><a name="projects" class="md-header-anchor"></a><span>Projects</span></h2><ol start='' ><li><a href='http://www.et.byu.edu/~redddog/'><span>Mark Redd&#39;s Resume</span></a><span>: A website showing my resume</span></li><li><a href='./python_book/site/index.html'><span>The Redd Python Book</span></a><span>: A free book to teach beginners about Python and introductory computer science</span></li><li><span>The </span><a href='https://github.com/flythereddflagg/lpfgopt/releases'><span>Python and C implementations </span></a><span>of the </span><a href='http://www.r3eda.com/leapfrogging-optimization-algorithm/'><em><span>Leapfrogging Optimization Algorithm</span></em></a><span> published by </span><a href='http://www.r3eda.com/about-russ/'><span>Dr. R. Russell Rhinehart</span></a></li><li><span>TBA</span></li></ol><p>&nbsp;</p></div>
 </body>
 </html>
