--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -458,7 +458,7 @@
                 
                 <h1 id="mark-edward-redd">Mark Edward Redd</h1>
 <p><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#101;&#100;&#100;&#100;&#111;&#103;&#106;&#114;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#101;&#100;&#100;&#100;&#111;&#103;&#106;&#114;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> | 552 N 800 W, Provo, UT, 84601 | (435) 760-9452</p>
-<p><a href="https://www.linkedin.com/in/mark-redd-53878880/">LinkedIn</a>, <a href="https://github.com/flythereddflagg">Github</a><!--, <a href="../docs/index.md" download>**Printable Resume**</a>--></p>
+<p><a href="https://www.linkedin.com/in/mark-redd-53878880/">LinkedIn</a>, <a href="https://github.com/flythereddflagg">Github</a>, <a href="/docs/Mark_Redd_Resume_Printable.pdf"><strong>Printable Resume</strong></a></p>
 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-7269-2155" href="https://orcid.org/0000-0001-7269-2155" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0001-7269-2155</a></div>
 
 <h2 id="experience">Experience</h2>
@@ -513,9 +513,10 @@
 <ul>
 <li>C / C++</li>
 <li>FORTRAN</li>
-<li>Javascript / HTML / CSS</li>
+<li>JavaScript / HTML / CSS</li>
 <li>MATLAB</li>
 <li>Python</li>
+<li>Microsoft VBA</li>
 </ul>
 <h3 id="software-platforms">Software / Platforms</h3>
 <ul>
@@ -526,6 +527,7 @@
 <li>Linux</li>
 <li>MathCAD</li>
 <li>MATLAB / Simulink</li>
+<li>Microsoft Office</li>
 </ul>
 <h3 id="industrial">Industrial</h3>
 <ul>
