--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -578,7 +578,7 @@
 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-7269-2155" href="https://orcid.org/0000-0001-7269-2155" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0001-7269-2155</a></div>
 
 <ul>
-<li>Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and W. Vincent Wilding, <em>Proper Use of the DIPPR 801 Database for Creation of Models, Methods, and Processes</em>, Journal of Chemical &amp; Engineering Data <strong>2021</strong> <em>66</em> (1), 3-10. DOI: 10.1021/acs.jced.0c00641</li>
+<li>Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and W. Vincent Wilding, <em>Proper Use of the DIPPR 801 Database for Creation of Models, Methods, and Processes</em>, Journal of Chemical &amp; Engineering Data <strong>2021</strong> <em>66</em> (1), 3-10. <a href="https://doi.org/10.1021/acs.jced.0c00641">DOI: 10.1021/acs.jced.0c00641</a></li>
 </ul>
 <h2 id="presentations">Presentations</h2>
 <ul>
