Updates to resume to include AIT alkane paper

--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -524,7 +524,7 @@
 <h3 id="engineering-intern">Engineering Intern</h3>
 <p><em>Sustainable Energy Solutions LLC, Orem, UT, USA | May 2014 – Aug 2015</em></p>
 <ul>
-<li>Worked with a team of engineers to build an experimental reactor</li>
+<li>Worked with a team of engineers to build an experimental, multi-fuel, combustion reactor</li>
 <li>Designed and began fabrication of a novel $CO_2$​ separation process</li>
 <li>Designed parts and assemblies with Autodesk Inventor CAD software</li>
 <li>Personally fabricated multiple components through various welding and machining processes</li>
@@ -548,7 +548,7 @@
 <p><em>Utah State University, Logan, UT, USA | Apr 2009 – Aug 2009</em></p>
 <ul>
 <li>Assisted a PhD candidate with experiments on Arabidopsis thaliana to find patterns in gene expression from the removal of Saccharide-9 from the plant genome</li>
-<li>Collected data from over 100 specimens by making synthetic growth media, planting and observing growth patterns</li>
+<li>Collected data from 100+ specimens by making synthetic growth media, planting and observing growth patterns</li>
 </ul>
 <h2 id="education">Education</h2>
 <h3 id="brigham-young-university">Brigham Young University</h3>
@@ -558,13 +558,13 @@
 <h2 id="skills-accomplishments">Skills &amp; Accomplishments</h2>
 <h3 id="programming">Programming</h3>
 <ul>
-<li>Experience with C / C++, C#, FORTRAN, Java, JavaScript / HTML / CSS, MATLAB, Python, SQL, Microsoft VBA</li>
+<li>Experience with C/C++, C#, FORTRAN, Java, JavaScript/HTML/CSS, MATLAB, Python, SQL, Microsoft VBA</li>
 <li>Implemented and published the open-source <a href="https://github.com/flythereddflagg/lpfgopt">Leapfrogging Algorithm</a> with library wrappers for C, C++ and Python</li>
-<li>Wrote an open-source introductory <a href="https://flythereddflagg.github.io/python_book/site/index.html">book</a> on Python and computer science</li>
+<li>Wrote an open-source introductory <a href="https://flythereddflagg.github.io/python_book/site/index.html">book on Python and computer science</a></li>
 </ul>
 <h3 id="software-platforms">Software / Platforms</h3>
 <ul>
-<li>Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools, Git, Linux, MathCAD, MATLAB / Simulink, Microsoft Office, Raspberry Pi, SQLite, Microsoft SQL Server</li>
+<li>Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools, Git, Linux, MathCAD, MATLAB/Simulink, Microsoft Office, Raspberry Pi, SQLite, Microsoft SQL Server</li>
 <li>Built custom data acquisition and analysis hardware and corresponding software using Arduino and other open-source platforms</li>
 </ul>
 <h3 id="industrial">Industrial</h3>
@@ -578,11 +578,12 @@
 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-7269-2155" href="https://orcid.org/0000-0001-7269-2155" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0001-7269-2155</a></div>
 
 <ul>
+<li>Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W. Vincent Wilding, <em>A Study of Unexpected Autoignition Temperature Trends for Pure</em> n-<em>Alkanes</em>, Fuel <strong>2021</strong>, (Accepted)</li>
 <li>Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and W. Vincent Wilding, <em>Proper Use of the DIPPR 801 Database for Creation of Models, Methods, and Processes</em>, Journal of Chemical &amp; Engineering Data <strong>2021</strong> <em>66</em> (1), 3-10. <a href="https://doi.org/10.1021/acs.jced.0c00641">DOI: 10.1021/acs.jced.0c00641</a></li>
 </ul>
 <h2 id="presentations">Presentations</h2>
 <ul>
-<li>Mark E. Redd, Glenn Seaton, Thomas A. Knotts IV, Neil F. Giles, and W. Vincent Wilding. “An Improved Method for Predicting Autoignition Temperatures Based on First Principles”, Properties and Phase Equilibria for Fuels and Petrochemicals: Model Development, AIChE Fall Meeting, November 16, 2020, Virtual Meeting, (https://youtu.be/v3WRcLRLV_M)</li>
+<li>Mark E. Redd, Glenn Seaton, Thomas A. Knotts IV, Neil F. Giles, and W. Vincent Wilding. “An Improved Method for Predicting Autoignition Temperatures Based on First Principles”, Properties and Phase Equilibria for Fuels and Petrochemicals: Model Development, AIChE Fall Meeting, November 16, 2020, Virtual Meeting, (<a href="https://youtu.be/v3WRcLRLV_M">https://youtu.be/v3WRcLRLV_M</a>)</li>
 <li>Mark E. Redd, Thomas A. Knotts, Neil F. Giles, and W. Vincent Wilding. “A Study of Unexpected Autoignition Temperature Trends for Pure <em>n-</em>Alkanes”, Presentation 480e, Presentation Session 480: Properties and Phase Equilibria for Fuels and Petrochemicals I, AIChE Annual Meeting, November 13, 2019. Orlando, FL.</li>
 </ul>
                 
