updated all the rest. ready for more sections also fixed add_nav.py

--- a/python_book/site/03-CLI/index.html
+++ b/python_book/site/03-CLI/index.html
@@ -966,7 +966,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../02-Getting-Started/">Previous: 02-Getting-Started</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../04-Hello-World/">Next: 04-Hello-World</a></p>
+<p><a href="../02-Getting-Started/">Previous: 02 - Getting Started</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../04-Hello-World/">Next: 04 - Hello World</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -1187,7 +1187,7 @@ basic exercises for the command line!</p>
 <!-- Navigation -->
 
 <hr />
-<p><a href="../02-Getting-Started/">Previous: 02-Getting-Started</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../04-Hello-World/">Next: 04-Hello-World</a></p>
+<p><a href="../02-Getting-Started/">Previous: 02 - Getting Started</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../04-Hello-World/">Next: 04 - Hello World</a></p>
 <hr />
 <!-- End Navigation -->
                 
