--- a/python_book/site/05-Comments/index.html
+++ b/python_book/site/05-Comments/index.html
@@ -854,7 +854,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../04-Hello-World/">Previous: 04-Hello-World</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../06-Strings-and-the-Print-Function/">Next: 06-Strings-and-the-Print-Function</a></p>
+<p><a href="../04-Hello-World/">Previous: 04 - Hello World</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../06-Strings-and-the-Print-Function/">Next: 06 - Strings and the Print Function</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -967,7 +967,7 @@ The proper name for this symbol is an octothorpe. However, I have heard the foll
 <!-- Navigation -->
 
 <hr />
-<p><a href="../04-Hello-World/">Previous: 04-Hello-World</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../06-Strings-and-the-Print-Function/">Next: 06-Strings-and-the-Print-Function</a></p>
+<p><a href="../04-Hello-World/">Previous: 04 - Hello World</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../06-Strings-and-the-Print-Function/">Next: 06 - Strings and the Print Function</a></p>
 <hr />
 <!-- End Navigation -->
                 
