--- a/python_book/site/07-Escape-Characters/index.html
+++ b/python_book/site/07-Escape-Characters/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../06-Strings-and-the-Print-Function/">Previous: 06-Strings-and-the-Print-Function</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../08-Formatted-Strings/">Next: 08-Formatted-Strings</a></p>
+<p><a href="../06-Strings-and-the-Print-Function/">Previous: 06 - Strings and the Print Function</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../08-Formatted-Strings/">Next: 08 - Formatted Strings</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -916,7 +916,7 @@ single quotes?" For example:</p>
 <!-- Navigation -->
 
 <hr />
-<p><a href="../06-Strings-and-the-Print-Function/">Previous: 06-Strings-and-the-Print-Function</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../08-Formatted-Strings/">Next: 08-Formatted-Strings</a></p>
+<p><a href="../06-Strings-and-the-Print-Function/">Previous: 06 - Strings and the Print Function</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../08-Formatted-Strings/">Next: 08 - Formatted Strings</a></p>
 <hr />
 <!-- End Navigation -->
                 
