--- a/python_book/site/08-Formatted-Strings/index.html
+++ b/python_book/site/08-Formatted-Strings/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../07-Escape-Characters/">Previous: 07-Escape-Characters</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../09-Variables-and-Memory/">Next: 09-Variables-and-Memory</a></p>
+<p><a href="../07-Escape-Characters/">Previous: 07 - Escape Characters</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../09-Variables-and-Memory/">Next: 09 - Variables and Memory</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -935,7 +935,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../07-Escape-Characters/">Previous: 07-Escape-Characters</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../09-Variables-and-Memory/">Next: 09-Variables-and-Memory</a></p>
+<p><a href="../07-Escape-Characters/">Previous: 07 - Escape Characters</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../09-Variables-and-Memory/">Next: 09 - Variables and Memory</a></p>
 <hr />
 <!-- End Navigation -->
                 
