--- a/python_book/site/09-Variables-and-Memory/index.html
+++ b/python_book/site/09-Variables-and-Memory/index.html
@@ -924,7 +924,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../08-Formatted-Strings/">Previous: 08-Formatted-Strings</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../10-Better-String-Formatting/">Next: 10-Better-String-Formatting</a></p>
+<p><a href="../08-Formatted-Strings/">Previous: 08 - Formatted Strings</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../10-Better-String-Formatting/">Next: 10 - Better String Formatting</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="9-variables-and-memory">9 - Variables and Memory</h1>
@@ -1161,7 +1161,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../08-Formatted-Strings/">Previous: 08-Formatted-Strings</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../10-Better-String-Formatting/">Next: 10-Better-String-Formatting</a></p>
+<p><a href="../08-Formatted-Strings/">Previous: 08 - Formatted Strings</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../10-Better-String-Formatting/">Next: 10 - Better String Formatting</a></p>
 <hr />
 <!-- End Navigation -->
                 
