--- a/python_book/site/10-Better-String-Formatting/index.html
+++ b/python_book/site/10-Better-String-Formatting/index.html
@@ -814,7 +814,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../09-Variables-and-Memory/">Previous: 09-Variables-and-Memory</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../11-Input-and-Output/">Next: 11-Input-and-Output</a></p>
+<p><a href="../09-Variables-and-Memory/">Previous: 09 - Variables and Memory</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../11-Input-and-Output/">Next: 11 - Input and Output</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="10-better-string-formatting">10 - Better String Formatting</h1>
@@ -934,7 +934,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../09-Variables-and-Memory/">Previous: 09-Variables-and-Memory</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../11-Input-and-Output/">Next: 11-Input-and-Output</a></p>
+<p><a href="../09-Variables-and-Memory/">Previous: 09 - Variables and Memory</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../11-Input-and-Output/">Next: 11 - Input and Output</a></p>
 <hr />
 <!-- End Navigation -->
                 
