--- a/python_book/site/11-Input-and-Output/index.html
+++ b/python_book/site/11-Input-and-Output/index.html
@@ -826,7 +826,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../10-Better-String-Formatting/">Previous: 10-Better-String-Formatting</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../12-Math-and-Data/">Next: 12-Math-and-Data</a></p>
+<p><a href="../10-Better-String-Formatting/">Previous: 10 - Better String Formatting</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../12-Math-and-Data/">Next: 12 - Math and Data</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="11-input-and-output">11 - Input and Output</h1>
@@ -880,7 +880,7 @@ is a gift card!" The cockroaches took it home and made slides.</em></p>
 <!-- Navigation -->
 
 <hr />
-<p><a href="../10-Better-String-Formatting/">Previous: 10-Better-String-Formatting</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../12-Math-and-Data/">Next: 12-Math-and-Data</a></p>
+<p><a href="../10-Better-String-Formatting/">Previous: 10 - Better String Formatting</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../12-Math-and-Data/">Next: 12 - Math and Data</a></p>
 <hr />
 <!-- End Navigation -->
                 
