--- a/python_book/site/16-File-Reading-and-Writing/index.html
+++ b/python_book/site/16-File-Reading-and-Writing/index.html
@@ -856,7 +856,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../15-Errors-Exceptions-and-Bugs/">Previous: 15-Errors-Exceptions-and-Bugs</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../17-Loops/">Next: 17-Loops</a></p>
+<p><a href="../15-Errors-Exceptions-and-Bugs/">Previous: 15 - Errors Exceptions and Bugs</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../17-Loops/">Next: 17 - Loops </a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -1001,7 +1001,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../15-Errors-Exceptions-and-Bugs/">Previous: 15-Errors-Exceptions-and-Bugs</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../17-Loops/">Next: 17-Loops</a></p>
+<p><a href="../15-Errors-Exceptions-and-Bugs/">Previous: 15 - Errors Exceptions and Bugs</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../17-Loops/">Next: 17 - Loops </a></p>
 <hr />
 <!-- End Navigation -->
                 
