--- a/python_book/site/17-Loops/index.html
+++ b/python_book/site/17-Loops/index.html
@@ -814,7 +814,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../16-File-Reading-and-Writing/">Previous: 16-File-Reading-and-Writing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../18-Iterables/">Next: 18-Iterables</a></p>
+<p><a href="../16-File-Reading-and-Writing/">Previous: 16 - File Reading and Writing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../18-Iterables/">Next: 18 - Iterables </a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="17-loops">17 - Loops</h1>
@@ -913,7 +913,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../16-File-Reading-and-Writing/">Previous: 16-File-Reading-and-Writing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../18-Iterables/">Next: 18-Iterables</a></p>
+<p><a href="../16-File-Reading-and-Writing/">Previous: 16 - File Reading and Writing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../18-Iterables/">Next: 18 - Iterables </a></p>
 <hr />
 <!-- End Navigation -->
                 
