--- a/python_book/site/20-Functions/index.html
+++ b/python_book/site/20-Functions/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../19-Dictionaries/">Previous: 19-Dictionaries</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../21-More-Functions/">Next: 21-More-Functions</a></p>
+<p><a href="../19-Dictionaries/">Previous: 19 - Dictionaries </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../21-More-Functions/">Next: 21 - More Functions</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="20-functions">20 - Functions</h1>
@@ -1009,7 +1009,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../19-Dictionaries/">Previous: 19-Dictionaries</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../21-More-Functions/">Next: 21-More-Functions</a></p>
+<p><a href="../19-Dictionaries/">Previous: 19 - Dictionaries </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../21-More-Functions/">Next: 21 - More Functions</a></p>
 <hr />
 <!-- End Navigation -->
                 
