--- a/python_book/site/21-More-Functions/index.html
+++ b/python_book/site/21-More-Functions/index.html
@@ -842,7 +842,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../20-Functions/">Previous: 20-Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../22-Try-Except/">Next: 22-Try-Except</a></p>
+<p><a href="../20-Functions/">Previous: 20 - Functions </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../22-Try-Except/">Next: 22 - Try Except</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="21-more-functions">21 - More Functions</h1>
@@ -962,7 +962,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../20-Functions/">Previous: 20-Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../22-Try-Except/">Next: 22-Try-Except</a></p>
+<p><a href="../20-Functions/">Previous: 20 - Functions </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../22-Try-Except/">Next: 22 - Try Except</a></p>
 <hr />
 <!-- End Navigation -->
                 
