--- a/python_book/site/29-Comments-and-Code-Documentation/index.html
+++ b/python_book/site/29-Comments-and-Code-Documentation/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../28-Modules/">Previous: 28-Modules</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../30-Packages-and-Project-Structure/">Next: 30-Packages-and-Project-Structure</a></p>
+<p><a href="../28-Modules/">Previous: 28 - Modules </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../30-Packages-and-Project-Structure/">Next: 30 - Packages and Project Structure</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -864,7 +864,7 @@
 <span class="linenos" data-linenos="25 "></span>        <span class="sd">&quot;&quot;&quot;</span>
 <span class="linenos" data-linenos="26 "></span><span class="sd">        This is a function or method belonging to the Dummy class</span>
 <span class="linenos" data-linenos="27 "></span><span class="sd">        that will take longer than one sentence to explain. Where</span>
-<span class="linenos" data-linenos="28 "></span><span class="sd">        this is the case be as detailed as necessary. Some functions</span>
+<span class="linenos" data-linenos="28 "></span><span class="sd">        this is the case, be as detailed as necessary. Some functions</span>
 <span class="linenos" data-linenos="29 "></span><span class="sd">        are so complex that they require many lines of code to explain</span>
 <span class="linenos" data-linenos="30 "></span><span class="sd">        the intent and use of a function. For such cases it is useful</span>
 <span class="linenos" data-linenos="31 "></span><span class="sd">        to list the parameters and what they mean. e.g. :</span>
@@ -936,7 +936,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../28-Modules/">Previous: 28-Modules</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../30-Packages-and-Project-Structure/">Next: 30-Packages-and-Project-Structure</a></p>
+<p><a href="../28-Modules/">Previous: 28 - Modules </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../30-Packages-and-Project-Structure/">Next: 30 - Packages and Project Structure</a></p>
 <hr />
 <!-- End Navigation -->
                 
