--- a/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
+++ b/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
@@ -868,7 +868,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../00-Table-of-Contents/">Previous: 00-Table-of-Contents</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../02-Getting-Started/">Next: 02-Getting-Started</a></p>
+<p>| <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../02-Getting-Started/">Next: 02 - Getting Started</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -939,7 +939,7 @@ following:</p>
 <!-- Navigation -->
 
 <hr />
-<p><a href="../00-Table-of-Contents/">Previous: 00-Table-of-Contents</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../02-Getting-Started/">Next: 02-Getting-Started</a></p>
+<p>| <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../02-Getting-Started/">Next: 02 - Getting Started</a></p>
 <hr />
 <!-- End Navigation -->
                 
