--- a/python_book/site/02-Getting-Started/index.html
+++ b/python_book/site/02-Getting-Started/index.html
@@ -910,7 +910,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../01-Intro-and-How-to-Use-This-Book/">Previous: 01-Intro-and-How-to-Use-This-Book</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../03-CLI/">Next: 03-CLI</a></p>
+<p><a href="../01-Intro-and-How-to-Use-This-Book/">Previous: 01 - Intro and How to Use This Book</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../03-CLI/">Next: 03 - CLI </a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -993,7 +993,7 @@ in mind or an idea or project you can be passionate about. Also, you will have a
 <!-- Navigation -->
 
 <hr />
-<p><a href="../01-Intro-and-How-to-Use-This-Book/">Previous: 01-Intro-and-How-to-Use-This-Book</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../03-CLI/">Next: 03-CLI</a></p>
+<p><a href="../01-Intro-and-How-to-Use-This-Book/">Previous: 01 - Intro and How to Use This Book</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../03-CLI/">Next: 03 - CLI </a></p>
 <hr />
 <!-- End Navigation -->
                 
