--- a/python_book/site/06-Strings-and-the-Print-Function/index.html
+++ b/python_book/site/06-Strings-and-the-Print-Function/index.html
@@ -840,7 +840,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../05-Comments/">Previous: 05-Comments</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../07-Escape-Characters/">Next: 07-Escape-Characters</a></p>
+<p><a href="../05-Comments/">Previous: 05 - Comments </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../07-Escape-Characters/">Next: 07 - Escape Characters</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -909,7 +909,7 @@ with your use of single and double quotes or you will run into problems.</p>
 <!-- Navigation -->
 
 <hr />
-<p><a href="../05-Comments/">Previous: 05-Comments</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../07-Escape-Characters/">Next: 07-Escape-Characters</a></p>
+<p><a href="../05-Comments/">Previous: 05 - Comments </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../07-Escape-Characters/">Next: 07 - Escape Characters</a></p>
 <hr />
 <!-- End Navigation -->
                 
