--- a/python_book/site/12-Math-and-Data/index.html
+++ b/python_book/site/12-Math-and-Data/index.html
@@ -870,7 +870,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../11-Input-and-Output/">Previous: 11-Input-and-Output</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../13-Logic-and-Boolean-Operators/">Next: 13-Logic-and-Boolean-Operators</a></p>
+<p><a href="../11-Input-and-Output/">Previous: 11 - Input and Output</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../13-Logic-and-Boolean-Operators/">Next: 13 - Logic and Boolean Operators</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -1127,7 +1127,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../11-Input-and-Output/">Previous: 11-Input-and-Output</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../13-Logic-and-Boolean-Operators/">Next: 13-Logic-and-Boolean-Operators</a></p>
+<p><a href="../11-Input-and-Output/">Previous: 11 - Input and Output</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../13-Logic-and-Boolean-Operators/">Next: 13 - Logic and Boolean Operators</a></p>
 <hr />
 <!-- End Navigation -->
                 
