--- a/python_book/site/13-Logic-and-Boolean-Operators/index.html
+++ b/python_book/site/13-Logic-and-Boolean-Operators/index.html
@@ -934,7 +934,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../12-Math-and-Data/">Previous: 12-Math-and-Data</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../14-If-elif-and-else/">Next: 14-If-elif-and-else</a></p>
+<p><a href="../12-Math-and-Data/">Previous: 12 - Math and Data</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../14-If-elif-and-else/">Next: 14 - If elif and else</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -1166,7 +1166,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../12-Math-and-Data/">Previous: 12-Math-and-Data</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../14-If-elif-and-else/">Next: 14-If-elif-and-else</a></p>
+<p><a href="../12-Math-and-Data/">Previous: 12 - Math and Data</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../14-If-elif-and-else/">Next: 14 - If elif and else</a></p>
 <hr />
 <!-- End Navigation -->
                 
