--- a/python_book/site/14-If-elif-and-else/index.html
+++ b/python_book/site/14-If-elif-and-else/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../13-Logic-and-Boolean-Operators/">Previous: 13-Logic-and-Boolean-Operators</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../15-Errors-Exceptions-and-Bugs/">Next: 15-Errors-Exceptions-and-Bugs</a></p>
+<p><a href="../13-Logic-and-Boolean-Operators/">Previous: 13 - Logic and Boolean Operators</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../15-Errors-Exceptions-and-Bugs/">Next: 15 - Errors Exceptions and Bugs</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -989,7 +989,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../13-Logic-and-Boolean-Operators/">Previous: 13-Logic-and-Boolean-Operators</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../15-Errors-Exceptions-and-Bugs/">Next: 15-Errors-Exceptions-and-Bugs</a></p>
+<p><a href="../13-Logic-and-Boolean-Operators/">Previous: 13 - Logic and Boolean Operators</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../15-Errors-Exceptions-and-Bugs/">Next: 15 - Errors Exceptions and Bugs</a></p>
 <hr />
 <!-- End Navigation -->
                 
