--- a/python_book/site/15-Errors-Exceptions-and-Bugs/index.html
+++ b/python_book/site/15-Errors-Exceptions-and-Bugs/index.html
@@ -910,7 +910,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../14-If-elif-and-else/">Previous: 14-If-elif-and-else</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../16-File-Reading-and-Writing/">Next: 16-File-Reading-and-Writing</a></p>
+<p><a href="../14-If-elif-and-else/">Previous: 14 - If elif and else</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../16-File-Reading-and-Writing/">Next: 16 - File Reading and Writing</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="15-errors-exceptions-and-bugs">15 - Errors, Exceptions and Bugs</h1>
@@ -1031,7 +1031,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../14-If-elif-and-else/">Previous: 14-If-elif-and-else</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../16-File-Reading-and-Writing/">Next: 16-File-Reading-and-Writing</a></p>
+<p><a href="../14-If-elif-and-else/">Previous: 14 - If elif and else</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../16-File-Reading-and-Writing/">Next: 16 - File Reading and Writing</a></p>
 <hr />
 <!-- End Navigation -->
                 
