--- a/python_book/site/22-Try-Except/index.html
+++ b/python_book/site/22-Try-Except/index.html
@@ -842,7 +842,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../21-More-Functions/">Previous: 21-More-Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../23-Imports/">Next: 23-Imports</a></p>
+<p><a href="../21-More-Functions/">Previous: 21 - More Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../23-Imports/">Next: 23 - Imports </a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="22-try-except">22 - Try Except</h1>
@@ -948,7 +948,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../21-More-Functions/">Previous: 21-More-Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../23-Imports/">Next: 23-Imports</a></p>
+<p><a href="../21-More-Functions/">Previous: 21 - More Functions</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../23-Imports/">Next: 23 - Imports </a></p>
 <hr />
 <!-- End Navigation -->
                 
