--- a/python_book/site/23-Imports/index.html
+++ b/python_book/site/23-Imports/index.html
@@ -828,7 +828,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../22-Try-Except/">Previous: 22-Try-Except</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../24-Reading-Code/">Next: 24-Reading-Code</a></p>
+<p><a href="../22-Try-Except/">Previous: 22 - Try Except</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../24-Reading-Code/">Next: 24 - Reading Code</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="23-imports">23 - Imports</h1>
@@ -1039,7 +1039,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../22-Try-Except/">Previous: 22-Try-Except</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../24-Reading-Code/">Next: 24-Reading-Code</a></p>
+<p><a href="../22-Try-Except/">Previous: 22 - Try Except</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../24-Reading-Code/">Next: 24 - Reading Code</a></p>
 <hr />
 <!-- End Navigation -->
                 
