--- a/python_book/site/24-Reading-Code/index.html
+++ b/python_book/site/24-Reading-Code/index.html
@@ -800,7 +800,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../23-Imports/">Previous: 23-Imports</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../25-Do-a-Project/">Next: 25-Do-a-Project</a></p>
+<p><a href="../23-Imports/">Previous: 23 - Imports </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../25-Do-a-Project/">Next: 25 - Do a Project</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="24-reading-code">24 - Reading Code</h1>
@@ -823,7 +823,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../23-Imports/">Previous: 23-Imports</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../25-Do-a-Project/">Next: 25-Do-a-Project</a></p>
+<p><a href="../23-Imports/">Previous: 23 - Imports </a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../25-Do-a-Project/">Next: 25 - Do a Project</a></p>
 <hr />
 <!-- End Navigation -->
                 
