--- a/python_book/site/25-Do-a-Project/index.html
+++ b/python_book/site/25-Do-a-Project/index.html
@@ -936,7 +936,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../24-Reading-Code/">Previous: 24-Reading-Code</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../26-Objects-and-Classes/">Next: 26-Objects-and-Classes</a></p>
+<p><a href="../24-Reading-Code/">Previous: 24 - Reading Code</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../26-Objects-and-Classes/">Next: 26 - Objects and Classes</a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="25-do-a-project">25 - Do a Project</h1>
@@ -1189,7 +1189,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../24-Reading-Code/">Previous: 24-Reading-Code</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../26-Objects-and-Classes/">Next: 26-Objects-and-Classes</a></p>
+<p><a href="../24-Reading-Code/">Previous: 24 - Reading Code</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../26-Objects-and-Classes/">Next: 26 - Objects and Classes</a></p>
 <hr />
 <!-- End Navigation -->
                 
