--- a/python_book/site/27-Inheritance-and-Polymorphism/index.html
+++ b/python_book/site/27-Inheritance-and-Polymorphism/index.html
@@ -856,7 +856,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../26-Objects-and-Classes/">Previous: 26-Objects-and-Classes</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../28-Modules/">Next: 28-Modules</a></p>
+<p><a href="../26-Objects-and-Classes/">Previous: 26 - Objects and Classes</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../28-Modules/">Next: 28 - Modules </a></p>
 <hr />
 <!-- End Navigation -->
 <h1 id="27-inheritance-and-polymorphism">27 - Inheritance and Polymorphism</h1>
@@ -1008,7 +1008,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../26-Objects-and-Classes/">Previous: 26-Objects-and-Classes</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../28-Modules/">Next: 28-Modules</a></p>
+<p><a href="../26-Objects-and-Classes/">Previous: 26 - Objects and Classes</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../28-Modules/">Next: 28 - Modules </a></p>
 <hr />
 <!-- End Navigation -->
                 
