--- a/python_book/site/32-Do-Another-Project/index.html
+++ b/python_book/site/32-Do-Another-Project/index.html
@@ -812,7 +812,7 @@
                 <!-- Navigation -->
 
 <hr />
-<p><a href="../31-Automated-Testing/">Previous: 31-Automated-Testing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../33-Branching-Out/">Next: 33-Branching-Out</a></p>
+<p><a href="../31-Automated-Testing/">Previous: 31 - Automated Testing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../33-Branching-Out/">Next: 33 - Branching Out</a></p>
 <hr />
 <!-- End Navigation -->
 
@@ -842,7 +842,7 @@
 <!-- Navigation -->
 
 <hr />
-<p><a href="../31-Automated-Testing/">Previous: 31-Automated-Testing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../33-Branching-Out/">Next: 33-Branching-Out</a></p>
+<p><a href="../31-Automated-Testing/">Previous: 31 - Automated Testing</a> | <a href="../00-Table-of-Contents/">Table of Contents</a> | <a href="../33-Branching-Out/">Next: 33 - Branching Out</a></p>
 <hr />
 <!-- End Navigation -->
                 
