--- a/python_book/site/09-Variables-and-Memory/index.html
+++ b/python_book/site/09-Variables-and-Memory/index.html
@@ -1141,6 +1141,7 @@
 </tr>
 </tbody>
 </table>
+<p>For a complete explanation of naming see the section in <a href="https://www.python.org/dev/peps/pep-0008/#naming-conventions">PEP 8</a>.</p>
 <h4 id="naming-conventions-and-guidelines">Naming Conventions and Guidelines</h4>
 <p>Within the limits of these rules, you can call your variables any name you want and make them as long or as short as you want. However, there are some conventions you should stick to you make your code better. The following conventions will help make your code easier to write and fix when something goes wrong. (And trust me, something <em>always</em> goes wrong.):</p>
 <ul>
