--- a/python_book/site/14-If-elif-and-else/index.html
+++ b/python_book/site/14-If-elif-and-else/index.html
@@ -1027,10 +1027,8 @@
 </ol>
 <h2 id="advanced-mastery">Advanced Mastery</h2>
 <ol>
-<li>There is a problem in the above script <code>if_else.py</code> that can cause errors if we're not careful. Can you find the problem? How would you fix it?</li>
+<li>There is a problem in the above script <code>if_else.py</code> that can cause errors if we're not careful. Can you find the problem? How would you fix it? Answer is <span title="Answer: It is possible, with very little editing, to make it so the variables defined between lines 30 and 40 may be referenced without assignment should the <code>else</code> block be deleted. This can be fixed by making sure they are defined above before the user is even prompted. There are other ways to fix this as well.">here</span>.</li>
 </ol>
-<!-- Answer: It is possible, with very little editing, to make it so the variables defined between lines 30 and 40 may be referenced without assignment should the `else` block be deleted. This can be fixed by making sure they are defined above before the user is even prompted. There are other ways to fix this as well. -->
-
 <!-- Navigation -->
 
 <hr />
