--- a/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
+++ b/python_book/site/01-Intro-and-How-to-Use-This-Book/index.html
@@ -919,15 +919,9 @@
 
 <h1 id="1-introduction-and-how-to-use-this-book">1 - Introduction and How to Use this Book</h1>
 <h2 id="introduction">Introduction</h2>
-<p>Python changed my life. Before learning Python, computers intimidated me. Python
-opened up to me a world of programming that made computers into useful tools
-instead of necessary evils. Regardless of the reason you are reading this book
+<p>Python changed my life. Before learning Python, computers intimidated me. Python opened up to me a world of programming that made computers into useful tools instead of necessary evils. Regardless of the reason you are reading this book
 right now, I hope that Python will have a similar impact on you.</p>
-<p>I am writing this book to introduce Python to newcomers to programming. If you
-are an experienced programmer and are looking to add Python to your repertoire,
-this may not be the book for you. The intent of this book is, primarily,
-to give a solid introduction to Python, and some introductory computer science, to those
-who are completely new to programming.</p>
+<p>I am writing this book to introduce Python to newcomers to programming. If you are an experienced programmer and are looking to add Python to your repertoire, this may not be the book for you. The intent of this book is, primarily, to give a solid introduction to Python, and some introductory computer science, to those who are completely new to programming.</p>
 <p>To that end, I have the following goals in mind while writing this book:</p>
 <ul>
 <li>
