added profile pic.

--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -596,6 +596,7 @@
 
 
 <p><a href="/media/Mark_Redd_Resume_Printable.pdf"><strong>Printable CV</strong></a></p>
+<p><img alt="Profile Pic" src="assets/profile_pic.png" /></p>
 <h1 id="mark-edward-redd">Mark Edward Redd</h1>
 <p><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#101;&#100;&#100;&#100;&#111;&#103;&#106;&#114;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#101;&#100;&#100;&#100;&#111;&#103;&#106;&#114;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> | 613 W Park Ave., Chandler AZ, 85225 | (435) 760-9452</p>
 <p><a href="https://www.linkedin.com/in/mark-redd-53878880/">LinkedIn</a>, <a href="https://github.com/flythereddflagg">GitHub</a></p>
